--- a/tests/tests.csproj
+++ b/tests/tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="fixtures\TagLib.Tests.FileFormats\AacFormatTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.FileFormats\AiffFormatTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.FileFormats\AsfFormatTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\MkvFormatTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.FileFormats\AviFormatTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.FileFormats\DsfFormatTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.FileFormats\FlacFormatTest.cs" />
