--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 sudo: required
-dist: trusty
+dist: bionic
 language: csharp
 solution: TaglibSharp.sln
 mono: latest
@@ -13,16 +13,9 @@ before_install:
 install:
   - sudo apt-get update -qq > /dev/null
     #  - mono .nuget/nuget.exe restore TaglibSharp.sln -Verbosity detailed
-  - mono .nuget/nuget.exe install NUnit.Runners -Version 3.9.0 -OutputDirectory packages
+  - mono .nuget/nuget.exe install NUnit.Runners -Version 3.10.0 -OutputDirectory packages
 
 script:
-  - ./autogen.sh
-  - make
-  - make dist # Let's make sure we don't break make dist
+  - msbuild /restore TaglibSharp.sln
   - cd src/TaglibSharp.Tests/bin/Debug
-  - mono ../../../../packages/NUnit.ConsoleRunner.3.9.0/tools/nunit3-console.exe --labels=All net45/TaglibSharp.Tests.dll
-# This errors out for some reason:
-  # System.IO.FileNotFoundException: Unable to find tests for C:\code\taglib-sharp\src\TaglibSharp.Tests\bin\Debug\netstandard2.0\TaglibSharp.Tests.dll.
-  # Make sure test project has a nuget reference of package "Microsoft.NET.Test.Sdk" and framework version settings are appropriate.
-  # Rerun with /diag option to diagnose further.
-  #  - mono ../../../../packages/NUnit.ConsoleRunner.3.9.0/tools/nunit3-console.exe --labels=All netstandard2.0/TaglibSharp.Tests.dll
+  - mono ../../../../packages/NUnit.ConsoleRunner.3.10.0/tools/nunit3-console.exe --labels=All net461/TaglibSharp.Tests.dll
