--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,9 +1,9 @@
 <Project>
-    <PropertyGroup>
-        <ReleaseVersion>2.2.0.0-beta</ReleaseVersion>
-        <RepositoryUrl>https://github.com/mono/taglib-sharp</RepositoryUrl>
-        <RepositoryType>git</RepositoryType>
-        <TaglibSharpTargetFramework>net45;netstandard2.0</TaglibSharpTargetFramework>
-        <LangVersion>latest</LangVersion>
-    </PropertyGroup>
+  <PropertyGroup>
+    <ReleaseVersion>2.2.0.0</ReleaseVersion>
+    <RepositoryUrl>https://github.com/mono/taglib-sharp</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <TaglibSharpTargetFramework>net45;netstandard2.0</TaglibSharpTargetFramework>
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
 </Project>
