--- a/src/TaglibSharp.Tests/TaglibSharp.Tests.csproj
+++ b/src/TaglibSharp.Tests/TaglibSharp.Tests.csproj
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <TargetFrameworks>$(TaglibSharpTargetFramework)</TargetFrameworks>
-    <RootNamespace>TaglibSharp.Tests</RootNamespace>
-    <AssemblyName>TaglibSharp.Tests</AssemblyName>
-    <ReleaseVersion>2.2.0.0</ReleaseVersion>
+    <TargetFrameworks>net461</TargetFrameworks>
+    <IsPackable>false</IsPackable>
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
-  <ItemGroup>
-    <None Remove="Makefile.am" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TaglibSharp\TaglibSharp.csproj">
@@ -22,25 +18,13 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
-  </ItemGroup>
-
   <ItemGroup>
-    <PackageReference Include="GtkSharp">
-      <Version>3.1.2</Version>
-    </PackageReference>
-    <PackageReference Include="GtkSharp.Win32">
-      <Version>3.1.2</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="NUnit" Version="3.11.0" />
-    <PackageReference Include="NUnit.ConsoleRunner">
-      <Version>3.9.0</Version>
-    </PackageReference>
-    <PackageReference Include="NUnit3TestAdapter">
-      <Version>3.12.0</Version>
-    </PackageReference>
+    <PackageReference Include="GtkSharp" Version="3.1.2" />
+    <PackageReference Include="GtkSharp.Win32" Version="3.1.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+    <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="NUnit.ConsoleRunner" Version="3.10.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
   </ItemGroup>
 
 </Project>
