--- a/src/TaglibSharp/TaglibSharp.csproj
+++ b/src/TaglibSharp/TaglibSharp.csproj
@@ -3,11 +3,15 @@
   <PropertyGroup>
     <TargetFrameworks>$(TaglibSharpTargetFramework)</TargetFrameworks>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\taglib-sharp.xml</DocumentationFile>
-    <AssemblyName>taglib-sharp</AssemblyName>
+    <AssemblyName>TagLibSharp</AssemblyName>
     <RootNamespace>TagLib</RootNamespace>
     <AssemblyOriginatorKeyFile>..\..\taglib-sharp.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -17,17 +21,15 @@
     <Description>A library for for reading and writing metadata in media files, including video, audio, and photo formats.</Description>
     <Copyright>Copyright (c) 2006-2007 Brian Nickel.  Copyright (c) 2009-2019 Other contributors</Copyright>
     <Authors>Brian Nickel, Gabriel Burt, Stephen Shaw, etc</Authors>
-    <owners />
     <PackageProjectUrl>https://github.com/mono/taglib-sharp</PackageProjectUrl>
-    <Company />
-    <PackageLicenseUrl>http://www.opensource.org/licenses/lgpl-2.1.php</PackageLicenseUrl>
+    <PackageLicenseExpression>LGPL-2.1-only</PackageLicenseExpression>
     <PackageReleaseNotes>Version $(ReleaseVersion)
+July 22, 2019
+* Remove autotools and friends. Simply code base.
+* Include a few fixes from lidarr Project
+
 January 21, 2019
 * Lots and lots of updates including net45 and .netstandard 2.0</PackageReleaseNotes>
   </PropertyGroup>
-
-  <ItemGroup>
-    <None Remove="Makefile.am" />
-  </ItemGroup>
 
 </Project>
