--- a/.github/workflows/ubuntunetcore.yml
+++ b/.github/workflows/ubuntunetcore.yml
@@ -15,6 +15,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: Install dependencies
+      run: |
+        sudo apt update -qq > /dev/null
+        sudo apt install -qq nuget msbuild mono-dev > /dev/null
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
